--- a/fonctionnalites.html
+++ b/fonctionnalites.html
@@ -20,12 +20,17 @@
 
   <main>
     <h2>Fonctionnalités</h2>
-    <ul>
-      <li>Capteurs de remplissage avec alertes en temps réel</li>
-      <li>Alimentation par panneau solaire</li>
-      <li>Connexion aux services de collecte</li>
-      <li>Design moderne et résistant</li>
-    </ul>
+    <main>
+    <section>
+      <h2>Fonctionnalités</h2>
+      <ul>
+        <li>Capteurs de remplissage avec alertes en temps réel</li>
+        <li>Alimentation par panneau solaire</li>
+        <li>Connexion aux services de collecte</li>
+        <li>Design moderne et résistant</li>
+      </ul>
+    </section>
+  
   </main>
 
   <footer>
@@ -33,3 +38,4 @@
   </footer>
 </body>
 </html>
+
