--- a/objectifs.html
+++ b/objectifs.html
@@ -19,6 +19,7 @@
   </header>
 
   <main>
+    <section>
     <h2>Nos Objectifs</h2>
     <p>
       Le projet Poubelle 2.0 poursuit plusieurs objectifs clés pour améliorer la gestion des déchets dans Dakar :
@@ -32,6 +33,7 @@
     <p>
       Ces objectifs visent à créer une nouvelle dynamique où la technologie est au service du développement durable.
     </p>
+      </section>
   </main>
 
   <footer>
@@ -39,3 +41,4 @@
   </footer>
 </body>
 </html>
+
