--- a/fonctionnalites.html
+++ b/fonctionnalites.html
@@ -23,6 +23,7 @@
     <main>
     <section>
       <h2>Fonctionnalités</h2>
+      <p>Notre poubelle intelligente va posséder les fonctionnalités suivantes : </p>
       <ul>
         <li>Capteurs de remplissage avec alertes en temps réel</li>
         <li>Alimentation par panneau solaire</li>
@@ -38,6 +39,7 @@
   </footer>
 </body>
 </html>
+
 
 
 
